RESOLVED FIXED280979
REGRESSION(284489@main): Keyboard typing into address bar is failing flakily on iPad
https://bugs.webkit.org/show_bug.cgi?id=280979
Summary REGRESSION(284489@main): Keyboard typing into address bar is failing flakily ...
Abrar Rahman Protyasha
Reported 2024-10-07 08:51:18 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-07 08:51:31 PDT
Abrar Rahman Protyasha
Comment 2 2024-10-07 08:53:01 PDT
Abrar Rahman Protyasha
Comment 3 2024-10-07 08:59:04 PDT
EWS
Comment 4 2024-10-07 10:03:10 PDT
Committed 284765@main (df97ab7f856b): <https://commits.webkit.org/284765@main> Reviewed commits have been landed. Closing PR #34776 and removing active labels.
EWS
Comment 5 2024-10-08 14:31:39 PDT
Committed 283286.231@safari-7620-branch (2f8abdc8e970): <https://commits.webkit.org/283286.231@safari-7620-branch> Reviewed commits have been landed. Closing PR #1989 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.