REGRESSION(284489@main): Keyboard typing into address bar is failing flakily on iPad https://bugs.webkit.org/show_bug.cgi?id=280979 rdar://137145230

Reviewed by Wenson Hsieh.

This patch is a straight revert of 284489@main, since it causes the
issue reported in the commit title and a resolution cannot happen
without platform investigation and just how we adopt
focusItemDeferralMode in WKContentView.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView focusItemDeferralMode]):

Canonical link: https://commits.webkit.org/284765@main