Source/WebKit/Platform/spi/ios/UIKitSPI.h
@@ -1058,12 +1058,6 @@ extern void _UIApplicationCatalystRequestViewServiceIdiomAndScaleFactor(UIUserIn
 @property (nonatomic, copy) id badgeValue;
 @end
 
-#if HAVE(UI_FOCUS_ITEM_DEFERRAL_MODE)
-typedef NS_ENUM(NSInteger, UIFocusItemDeferralMode) {
-    UIFocusItemDeferralModeNever = 2
-};
-#endif
-
 #endif // USE(APPLE_INTERNAL_SDK)
 
 #if ENABLE(OVERLAY_REGIONS_IN_EVENT_REGION)
